--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -21,3 +21,12 @@
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(108,197,217,1) 49%, rgba(0,212,255,1) 100%);
 
 }
+.btn{
+    background-color: blue;
+    color:white;
+    border: brown;
+}
+.btnForm{
+    width: 100px;
+    
+}
